--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
       </div>
     </section>
 
-    <!-- FOOTER – refined with integrated credit line -->
+    <!-- FOOTER with exactly three lines as requested -->
     <footer id="contact" class="bg-[#0d1b3e] border-t border-white/10">
       <div class="max-w-7xl mx-auto px-6 lg:px-8 py-10">
         <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8 mb-8">
@@ -379,14 +379,11 @@
           <div><h4 class="font-semibold mb-4 text-white">Support</h4><ul class="space-y-3 text-sm text-white/60"><li><a href="/support" class="hover:text-[#f5c518]">Donate</a></li><li><a href="/support" class="hover:text-[#f5c518]">Become a Partner</a></li><li><a href="/contact" class="hover:text-[#f5c518]">Contact Us</a></li><li><a href="#" class="hover:text-[#f5c518]">Privacy Policy</a></li><li><a href="#" class="hover:text-[#f5c518]">Terms of Service</a></li></ul></div>
         </div>
 
-        <!-- bottom row: copyright + credit (combined) and RISE statement -->
-        <div class="pt-8 border-t border-white/10 flex flex-col md:flex-row items-center justify-between gap-2 text-sm text-white/40">
-          <p class="order-2 md:order-1 text-center md:text-left">
-            © 2025 Pathways. All rights reserved. <span class="inline-block mx-1">·</span> Built by Keejah Mwandu
-          </p>
-          <p class="order-1 md:order-2 text-center md:text-right text-white/40">
-            Pathways is an initiative of RISE Ubuntu
-          </p>
+        <!-- exactly three lines, stacked, centered -->
+        <div class="pt-8 border-t border-white/10 flex flex-col items-center gap-1 text-sm text-white/40 text-center">
+          <p>© 2025 Pathways. All rights reserved.</p>
+          <p>Pathways is an initiative of RISE Ubuntu, a registered non-profit organization in Zambia.</p>
+          <p>Built by Keejah Mwandu</p>
         </div>
       </div>
     </footer>
