--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 
         <!-- exactly three lines, stacked, centered -->
         <div class="pt-8 border-t border-white/10 flex flex-col items-center gap-1 text-sm text-white/40 text-center">
-         <Br> <p>© 2025 Pathways. All rights reserved.</p></BR>
+          <p>© 2025 Pathways. All rights reserved.</p>
           <p>Pathways is an initiative of RISE Ubuntu, a registered non-profit organization in Zambia.</p>
           <p>Built by Keejah Mwandu</p>
         </div>
@@ -413,4 +413,5 @@
   </script>
 </body>
 </html>
+
 
