--- a/contact.html
+++ b/contact.html
@@ -153,6 +153,47 @@
       </div>
     </section>
 
+    <!-- ===== CONTACT FORM ===== -->
+    <section class="py-16 bg-gray-100">
+      <div class="max-w-3xl mx-auto px-6 lg:px-8">
+        <h2 class="text-3xl md:text-4xl font-light text-[#0d1b3e] text-center mb-4">Send a <span class="font-semibold">Message</span></h2>
+        <p class="text-center text-gray-600 mb-8">We'll get back to you within 48 hours.</p>
+        <form class="bg-white rounded-2xl p-8 shadow-md border border-gray-200">
+          <div class="grid md:grid-cols-2 gap-6 mb-6">
+            <div>
+              <label class="block text-sm font-medium text-gray-700 mb-1">Name</label>
+              <input type="text" placeholder="Your name" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-[#f5c518] focus:border-transparent outline-none">
+            </div>
+            <div>
+              <label class="block text-sm font-medium text-gray-700 mb-1">Email</label>
+              <input type="email" placeholder="your@email.com" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-[#f5c518] focus:border-transparent outline-none">
+            </div>
+          </div>
+          <div class="mb-6">
+            <label class="block text-sm font-medium text-gray-700 mb-1">Reason for Contact</label>
+            <select class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-[#f5c518] focus:border-transparent outline-none bg-white">
+              <option>Select a reason</option>
+              <option>General Inquiry</option>
+              <option>Application Question</option>
+              <option>Partnership Opportunity</option>
+              <option>Donation</option>
+              <option>Other</option>
+            </select>
+          </div>
+          <div class="mb-6">
+            <label class="block text-sm font-medium text-gray-700 mb-1">Message</label>
+            <textarea rows="5" placeholder="How can we help?" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-[#f5c518] focus:border-transparent outline-none"></textarea>
+          </div>
+          <div class="text-center">
+            <button type="submit" class="inline-flex items-center justify-center gap-2 bg-[#0d1b3e] text-[#f5c518] hover:bg-[#0d1b3e]/90 font-semibold rounded-full px-8 h-12 text-base shadow-lg transition">
+              Send Message
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 2L11 13"/><path d="M22 2l-7 20-4-9-9-4 20-7z"/></svg>
+            </button>
+          </div>
+        </form>
+      </div>
+    </section>
+
     <!-- ===== FOOTER with three stacked lines and credit ===== -->
     <footer class="bg-[#0d1b3e] border-t border-white/10">
       <div class="max-w-7xl mx-auto px-6 lg:px-8 py-10">
