--- a/contact.html
+++ b/contact.html
@@ -153,12 +153,13 @@
       </div>
     </section>
 
-    <!-- ===== CONTACT FORM ===== -->
+    <!-- ===== CONTACT FORM with file upload ===== -->
     <section class="py-16 bg-gray-100">
       <div class="max-w-3xl mx-auto px-6 lg:px-8">
         <h2 class="text-3xl md:text-4xl font-light text-[#0d1b3e] text-center mb-4">Send a <span class="font-semibold">Message</span></h2>
         <p class="text-center text-gray-600 mb-8">We'll get back to you within 48 hours.</p>
-        <form class="bg-white rounded-2xl p-8 shadow-md border border-gray-200">
+        <!-- added enctype for file upload -->
+        <form class="bg-white rounded-2xl p-8 shadow-md border border-gray-200" enctype="multipart/form-data">
           <div class="grid md:grid-cols-2 gap-6 mb-6">
             <div>
               <label class="block text-sm font-medium text-gray-700 mb-1">Name</label>
@@ -183,6 +184,11 @@
           <div class="mb-6">
             <label class="block text-sm font-medium text-gray-700 mb-1">Message</label>
             <textarea rows="5" placeholder="How can we help?" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-[#f5c518] focus:border-transparent outline-none"></textarea>
+          </div>
+          <!-- New file upload field -->
+          <div class="mb-6">
+            <label class="block text-sm font-medium text-gray-700 mb-1">Attach File (optional)</label>
+            <input type="file" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-[#f5c518] focus:border-transparent outline-none file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-[#f5c518] file:text-[#0d1b3e] hover:file:bg-[#f5c518]/90">
           </div>
           <div class="text-center">
             <button type="submit" class="inline-flex items-center justify-center gap-2 bg-[#0d1b3e] text-[#f5c518] hover:bg-[#0d1b3e]/90 font-semibold rounded-full px-8 h-12 text-base shadow-lg transition">
