--- a/support.html
+++ b/support.html
@@ -22,8 +22,9 @@
     #mobileMenu { transition: max-height 0.3s ease, opacity 0.2s; max-height: 0; opacity: 0; overflow: hidden; }
     #mobileMenu.open { max-height: 400px; opacity: 1; }
 
-    /* hero background (same as index) */
+    /* ===== HERO BACKGROUND – REPLACE THE URL WITH YOUR OWN IMAGE ===== */
     .hero-bg {
+      /* 🔁 Replace the URL below with the direct link to your own image */
       background-image: url('https://images.unsplash.com/photo-1469571486292-0ba58a3f068b?q=80&w=2070&auto=format&fit=crop');
       background-attachment: fixed;
       background-size: cover;
@@ -48,7 +49,7 @@
           <a class="text-[13px] font-medium transition-colors hover:text-[#f5c518] text-white/90" href="programs.html">Programs</a>
           <a class="text-[13px] font-medium transition-colors hover:text-[#f5c518] text-white/90" href="stories.html">Stories</a>
           <a class="text-[13px] font-medium transition-colors hover:text-[#f5c518] text-white/90" href="apply.html">Apply</a>
-          <a class="text-[13px] font-medium transition-colors hover:text-[#f5c518] text-white font-semibold underline underline-offset-4 decoration-[#f5c518]" href="support.html">Support</a>
+          <a class="text-[13px] font-medium transition-colors hover:text-[#f5c518] text-white/90" href="support.html">Support</a>
           <a class="text-[13px] font-medium transition-colors hover:text-[#f5c518] text-white/90" href="contact.html">Contact</a>
         </div>
         <div class="flex items-center gap-2">
@@ -66,7 +67,7 @@
           <a class="text-[15px] font-medium text-white/90 hover:text-[#f5c518]" href="programs.html">Programs</a>
           <a class="text-[15px] font-medium text-white/90 hover:text-[#f5c518]" href="stories.html">Stories</a>
           <a class="text-[15px] font-medium text-white/90 hover:text-[#f5c518]" href="apply.html">Apply</a>
-          <a class="text-[15px] font-medium text-white hover:text-[#f5c518] font-semibold" href="support.html">Support</a>
+          <a class="text-[15px] font-medium text-white/90 hover:text-[#f5c518]" href="support.html">Support</a>
           <a class="text-[15px] font-medium text-white/90 hover:text-[#f5c518]" href="contact.html">Contact</a>
         </div>
       </div>
