--- a/support.html
+++ b/support.html
@@ -25,7 +25,7 @@
     /* ===== HERO BACKGROUND – REPLACE THE URL WITH YOUR OWN IMAGE ===== */
     .hero-bg {
       /* 🔁 Replace the URL below with the direct link to your own image */
-      background-image: url('https://images.unsplash.com/photo-1469571486292-0ba58a3f068b?q=80&w=2070&auto=format&fit=crop');
+      background-image: url('img/support.png');
       background-attachment: fixed;
       background-size: cover;
       background-position: center;
@@ -321,3 +321,4 @@
   </script>
 </body>
 </html>
+
