--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     }
     /* background image fallback */
     .hero-bg {
-      background-image: url('https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=2070&auto=format&fit=crop'); /* placeholder study group */
+      background-image: url('img/home.png'); /* placeholder study group */
       background-attachment: fixed;
       background-size: cover;
       background-position: center;
@@ -413,5 +413,6 @@
   </script>
 </body>
 </html>
+
 
 
