--- a/about.html
+++ b/about.html
@@ -94,16 +94,16 @@
     </nav>
   </div>
 
-  <main class="min-h-screen pt-24 bg-gray-50">
-    <!-- ===== HERO (about header with img/about.png and overlay like index) ===== -->
-    <section class="relative about-hero flex items-center justify-center py-20 overflow-hidden">
+  <main class="min-h-screen bg-gray-50">
+    <!-- ===== HERO (full screen with img/about.png and overlays like index) ===== -->
+    <section class="relative min-h-screen flex items-center justify-center about-hero">
       <!-- overlays (same as index) -->
       <div class="absolute inset-0 z-[5] bg-black/25"></div>
       <div class="absolute inset-0 z-10 bg-gradient-to-b from-[#0d1b3e]/75 via-[#0d1b3e]/55 to-[#0d1b3e]/80"></div>
 
-      <div class="relative z-20 max-w-4xl mx-auto px-6 lg:px-8 text-center py-10">
-        <h1 class="text-4xl md:text-5xl font-light text-white mb-3 drop-shadow-lg">About <span class="font-semibold text-[#f5c518]">Pathways</span></h1>
-        <p class="text-xl text-white/80 max-w-2xl mx-auto text-balance">Who we are, what we believe, and how we serve young Zambians.</p>
+      <div class="relative z-20 max-w-4xl mx-auto px-6 lg:px-8 text-center">
+        <h1 class="text-4xl md:text-5xl lg:text-6xl font-light text-white mb-4 drop-shadow-lg text-balance">About <span class="font-semibold text-[#f5c518]">Pathways</span></h1>
+        <p class="text-xl md:text-2xl text-white/80 max-w-2xl mx-auto text-balance">Who we are, what we believe, and how we serve young Zambians.</p>
       </div>
     </section>
 
