--- a/programs.html
+++ b/programs.html
@@ -37,7 +37,7 @@
   <div class="fixed top-0 left-0 right-0 z-50 px-4 md:px-8 pt-4">
     <nav class="max-w-6xl mx-auto rounded-2xl transition-all duration-300 bg-white/15 backdrop-blur-md border border-white/30 shadow-lg">
       <div class="px-5 lg:px-8 h-16 flex items-center justify-between">
-        <a class="flex items-center gap-2 flex-shrink-0" href="/">
+        <a class="flex items-center gap-2 flex-shrink-0" href="index.html">
           <img src="https://rise-henna-pi.vercel.app/main%20logo%20left.png" alt="Pathways" class="h-8 w-auto object-contain">
           <img src="https://rise-henna-pi.vercel.app/logo%20right.png" alt="RISE Ubuntu" class="h-8 w-auto object-contain">
         </a>
@@ -51,7 +51,8 @@
           <a class="text-[13px] font-medium transition-colors hover:text-[#f5c518] text-white/90" href="contact.html">Contact</a>
         </div>
         <div class="flex items-center gap-2">
-          <button class="inline-flex items-center justify-center bg-[#f5c518] text-[#0d1b3e] hover:bg-[#f5c518]/90 font-semibold rounded-full px-5 h-9 text-sm shadow-md">Apply Now</button>
+          <!-- Apply Now link in navbar -->
+          <a href="apply.html" class="inline-flex items-center justify-center bg-[#f5c518] text-[#0d1b3e] hover:bg-[#f5c518]/90 font-semibold rounded-full px-5 h-9 text-sm shadow-md">Apply Now</a>
           <button id="menuToggle" type="button" aria-label="Toggle menu" class="lg:hidden flex items-center justify-center w-9 h-9 rounded-full border-2 border-white/50 text-white hover:bg-white/10">
             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" id="chevronIcon"><path d="m6 9 6 6 6-6"/></svg>
           </button>
@@ -90,15 +91,17 @@
             Two structured programmes designed to take high-potential students from where they are to where they deserve to be — in higher education, employment, and leadership.
           </p>
           <div class="flex flex-col sm:flex-row items-center justify-center gap-3 pt-4">
-            <button class="inline-flex items-center justify-center gap-2 bg-[#f5c518] text-[#0d1b3e] hover:bg-[#f5c518]/90 font-semibold rounded-full px-7 h-11 text-sm group shadow-lg">
+            <!-- Apply Now link (hero) -->
+            <a href="apply.html" class="inline-flex items-center justify-center gap-2 bg-[#f5c518] text-[#0d1b3e] hover:bg-[#f5c518]/90 font-semibold rounded-full px-7 h-11 text-sm group shadow-lg">
               Apply Now
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="ml-2 h-4 w-4 group-hover:translate-x-1 transition-transform">
                 <path d="M5 12h14"></path><path d="m12 5 7 7-7 7"></path>
               </svg>
-            </button>
-            <button class="inline-flex items-center justify-center gap-2 font-medium rounded-full px-7 h-11 text-sm border-2 border-white/50 text-white bg-white/10 hover:bg-white/20 backdrop-blur-sm">
+            </a>
+            <!-- Support Pathways link (hero) -->
+            <a href="support.html" class="inline-flex items-center justify-center gap-2 font-medium rounded-full px-7 h-11 text-sm border-2 border-white/50 text-white bg-white/10 hover:bg-white/20 backdrop-blur-sm">
               Support Pathways
-            </button>
+            </a>
           </div>
         </div>
       </div>
@@ -384,7 +387,7 @@
       <div class="max-w-7xl mx-auto px-6 lg:px-8 py-10">
         <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8 mb-8">
           <div class="space-y-4">
-            <a class="flex items-center gap-2" href="/">
+            <a class="flex items-center gap-2" href="index.html">
               <img src="https://rise-henna-pi.vercel.app/main%20logo%20left.png" alt="Pathways" class="h-9 w-auto object-contain brightness-0 invert">
               <img src="https://rise-henna-pi.vercel.app/logo%20right.png" alt="RISE Ubuntu" class="h-9 w-auto object-contain brightness-0 invert">
             </a>
@@ -458,4 +461,3 @@
   </script>
 </body>
 </html>
-
